src/components/home/home.module.scss
.home {
  min-height: calc(100vh - 60px);
  display: flex;
  flex-direction: row;
  padding-left: 0;
  padding-right: 0;
  width: 100%;
  margin-right: auto;
  margin-left: auto;
  overflow: auto;
}

.content {
  display: flex;
  flex-direction: column;
  width: calc(100% - 235px);
  min-height: calc(100vh - 60px);
  transition:
    width 0.25s ease,
    margin 0.25s ease;
  overflow: auto;
}

